# az104-mslearn-complete-book-builder

./: .gitignore  README.md  generate_az104_examstyle_chapter_test_book.py  generate_az104_scenario_test_book.py  generate_az104_test_book.py  pyproject.toml  run_az104_book.py
docs/: ARCHITECTURE.md  OPERATIONS.md
output/20260504_225156/: coverage_report.json  manifest.json  official_pages.jsonl  unit_content.jsonl
output/20260504_225156/book/: AZ-104_Chapter_Test_Book.epub  AZ-104_Chapter_Test_Book.md  AZ-104_Chapter_Test_Book.txt  AZ-104_Chapter_Test_Book_Coverage.json  AZ-104_ExamStyle_Chapter_Test_Book.epub  AZ-104_ExamStyle_Chapter_Test_Book_Coverage.json  AZ-104_Microsoft_Learn_Verbatim.epub  AZ-104_Microsoft_Learn_Verbatim.md  AZ-104_Microsoft_Learn_Verbatim.txt  AZ-104_Scenario_Test_Book.epub  AZ-104_Scenario_Test_Book.md  AZ-104_Scenario_Test_Book.txt  AZ-104_Scenario_Test_Book_Coverage.json
output/20260504_225156/book/_epub_check/unzipped/EPUB/: ch001.xhtml  ch002.xhtml  ch003.xhtml  ch004.xhtml  ch005.xhtml  ch006.xhtml  ch007.xhtml  ch008.xhtml  ch009.xhtml  ch010.xhtml  ch011.xhtml  ch012.xhtml  ch013.xhtml  ch014.xhtml  ch015.xhtml  ch016.xhtml  ch017.xhtml  ch018.xhtml  ch019.xhtml  ch020.xhtml  ch021.xhtml  ch022.xhtml  ch023.xhtml  ch024.xhtml  ch025.xhtml  ch026.xhtml  (+6 more)
src/az104_refactored_tool/: __init__.py  book.py  catalog.py  cli.py  fetcher.py  io_utils.py  logging_utils.py  models.py  official_pages.py
tests/: test_catalog_utils.py  test_epub_normalization.py  test_examstyle_generator.py  test_fetcher_encoding.py  test_official_pages.py
(+1 files in other folders)
