[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "az104-refactored-tool"
version = "0.1.0"
description = "Refactored AZ-104 Microsoft Learn content collector and book builder."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
epub = ["ebooklib>=0.18"]
dev = ["pytest>=8.2.0"]

[project.scripts]
az104-tool = "az104_refactored_tool.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

